Scene Simplify does not update correctly #55153

Closed
opened 2018-05-22 17:41:11 +02:00 by Andy Goralczyk · 6 comments
Member

Example File: simplify.blend

The cube has a subsurf modifier, when enabling Simplify in the scene context, it should be disabled, however it only updates once the object is moved or the scene updates in any other way.

Also when changing the global subsurf level, updates happen only randomly.
We use this feature a lot to make animation scenes more responsive)

This video shows the issue, too: simplify-2018-05-22_17.35.07.mp4

Example File: [simplify.blend](https://archive.blender.org/developer/F3430137/simplify.blend) The cube has a subsurf modifier, when enabling Simplify in the scene context, it should be disabled, however it only updates once the object is moved or the scene updates in any other way. Also when changing the global subsurf level, updates happen only randomly. We use this feature a lot to make animation scenes more responsive) This video shows the issue, too: [simplify-2018-05-22_17.35.07.mp4](https://archive.blender.org/developer/F3430168/simplify-2018-05-22_17.35.07.mp4)
Author
Member

Added subscriber: @eyecandy

Added subscriber: @eyecandy

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Confirmed here, on updating simplify settings we are only tagging LEGACY_0, but we need to either call TRANSFORM, GEOMETRY or COPY_ON_WRITE.

Confirmed here, on updating simplify settings we are only tagging LEGACY_0, but we need to either call TRANSFORM, GEOMETRY or COPY_ON_WRITE.

This is more complicated for linked data. For instance the 01_025_A.anim.blend. Even if you bpy.context.scene.update() to force depsgraph to update doesn't work for the branch and the rock.

This is more complicated for linked data. For instance the `01_025_A.anim.blend`. Even if you `bpy.context.scene.update()` to force depsgraph to update doesn't work for the branch and the rock.
Brecht Van Lommel was assigned by Dalai Felinto 2018-05-22 18:12:43 +02:00

This issue was referenced by 6e8d4bcd01

This issue was referenced by 6e8d4bcd0189b4776614f4fef357e68fe1aed388

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55153
No description provided.