Fix T55153: missing updates when changing simplify settings.

This line should not have been removed.